[package]
name = "netutils-cli"
version = "0.2.0"
edition = "2021"
description = "本地网络检测工具集：网络接口、路由、出口、代理检测，Ping、DNS、Traceroute、端口扫描、连通性测试"
license = "MIT"
repository = "https://github.com/user/netutils-cli"
keywords = ["network", "cli", "ping", "dns", "traceroute"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "netutils"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
unicode-width = "0.2"
tokio = { version = "1", features = ["full"] }
surge-ping = "0.8"
trust-dns-resolver = "0.23"
socket2 = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
once_cell = "1"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_Globalization"] }
